--- a/public/frontend/css/main-css.css
+++ b/public/frontend/css/main-css.css
@@ -68,8 +68,8 @@ a:hover{
 
 .ava {
     margin-right: 5px;
-    width: 25px;
-    height: 25px;
+    width: 30px;
+    height: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -77,8 +77,12 @@ a:hover{
     color: white;
     font-size: 10pt;
     border-radius: 50%;
+    overflow: hidden;
 }
-
+.ava img{
+    width: 100%;
+    height: 100%;
+}
 .menu li .fa-chevron-down {
     margin-left: 5px;
 }
@@ -86,9 +90,11 @@ a:hover{
     display: flex;
     margin-top: 5px;
 }
-
+.account-name{
+    padding-top: 2px;
+}
 .main-header i{
-   display: none; 
+   display: none;
 }
 
 .logo {
