--- a/public/frontend/css/main-css.css
+++ b/public/frontend/css/main-css.css
@@ -117,13 +117,12 @@ a:hover{
 }
 
 .home-page {
-    height: 100%;
-    width: 100%;
     background: url("../images/banner-bg.png");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     text-align: center;
+    padding-bottom: 30px;
 }
 .home-page h2{
     width: 70%;
@@ -180,7 +179,7 @@ margin-top: 10px;
 }
 .page{
     padding-top: 100px;
-    margin-bottom: 30px;
+    padding-bottom: 30px;
 }
 .select-gender{
     width: 60%;
@@ -532,6 +531,26 @@ margin-bottom: 20px;
     font-size: 18pt;
     text-transform: uppercase;
     padding: 10px 20%;
+}
+.user-numbers{
+    padding: 10px;
+    padding-right: 20px;
+    border-radius: 0 20px 20px 0;
+    background: #212529;
+    position: fixed;
+    top: 30%;
+    left: 0;
+}
+.user-numbers p {
+    color: white;
+}
+.user-numbers p:first-child span{
+    color: red;
+    font-weight: bold;
+}
+.user-numbers p:last-child span{
+    color: green;
+    font-weight: bold;
 }
 @media only screen and (max-width: 812px){
     .logo-title{
